initial support for AlmaLinux

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: Include tasks for {{ ansible_distribution }}
   include_tasks: "{{ ansible_distribution }}.yml"
+  when: ansible_distribution == "Ubuntu"
 
 - name: "Download Docker-compose {{ docker_compose_version }}"
   get_url:
