--- a/roles/kubernetes-tools/tasks/main.yml
+++ b/roles/kubernetes-tools/tasks/main.yml
@@ -1,3 +1,4 @@
 ---
 - name: Include tasks for {{ ansible_os_family }}
   include_tasks: "{{ ansible_os_family }}.yml"
+  when: ansible_os_family == "Debian"
