--- a/roles/edge/tasks/Debian.yml
+++ b/roles/edge/tasks/Debian.yml
@@ -7,7 +7,7 @@
 - name: Install Microsoft Edge Insider GPG Key for APT
   apt_key:
     url: "https://packages.microsoft.com/keys/microsoft.asc"
-    keyring: "{{ code_keyring }}"
+    keyring: "{{ edge_keyring }}"
     state: present
     
 - name: Install Microsoft Edge Insider APT Repository
